Adding new files with functions for stages.

--- a/index.html
+++ b/index.html
@@ -1,29 +1,37 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8"/>
+  <meta charset="UTF-8"/>
   <title> Escaping Charges</title>
-  <style>
-    *{ padding: 0; margin: 0; }
-    canvas { background: #ffffff; display: block; margin 0 auto; }
-  </style>
+  <script type="text/javascript" src="./HackCMU.js"> </script>
+  <script type="text/javascript" src="./Astages.js"> </script>
+  <script type="text/javascript" src="./Bstages.js"> </script>
+  <script type="text/javascript" src="./Cstages.js"> </script>
 </head>
-<body>
-<canvas id="screen" width="2480" height="3508"></canvas>
 
-<script src=
-  "https://raw.githubusercontent.com/Bae18H/HackCMU/master/HackCMU.js">
-</script>
+<body>
+<canvas tabindex=1 id="screen" style="position:absolute; left:0px; top:0px;"></canvas>
 
 <script>
+  // Globals
   var canvas = document.getElementById("screen");
   var ctx = canvas.getContext("2d");
+
   ctx.canvas.width = window.innerWidth;
   ctx.canvas.height = window.innerHeight;
+  cwidth = canvas.width;
+  cheight = canvas.height;
 
   var playerChoice;
   var crimeChoice;
 
+  var mouseX = 0;
+  var mouseY = 0;
+
+  var p;
+
+
+  // Misc helper
   function getMousePos(canvas, evt) {
       var rect = canvas.getBoundingClientRect();
       return {
@@ -32,6 +40,24 @@
       };
   }
 
+  var loop = function(){
+  	ctx.clearRect(0, 0, cwidth, cheight);
+  	draw(ctx, mouseX, mouseY);
+
+  	p.update();
+  	p.draw(ctx);
+
+  	ctx.font="20px Georgia";
+  	ctx.fillStyle="#000000";
+  	ctx.fillText("E: " + Efield(mouseX, mouseY).toString(), cwidth/10, cheight/10);
+  	window.requestAnimationFrame(loop);
+  }
+
+
+
+
+
+  // Functions for loading the next screen
   function loadCrime()
   {
     var crime = new Image();
@@ -41,44 +67,41 @@
     crime.onload = function()
     {
       ctx.drawImage(crime, 0, 0, crime.width,  crime.height,
-                           0, 0, canvas.width, canvas.height);
+                           0, 0, cwidth, cheight);
       gps.src = "https://raw.githubusercontent.com/Bae18H/HackCMU/master/Images/fuckheisenburg.png";
       cat.src = "https://raw.githubusercontent.com/Bae18H/HackCMU/master/Images/killed%20schrodinger%20cat.png";
       car.src = "https://raw.githubusercontent.com/Bae18H/HackCMU/master/Images/speed%20of%20light.png";
     }
     crime.src = "https://raw.githubusercontent.com/Bae18H/HackCMU/901c966699d13ffe8a4b3e2fece5876b0fcbe597/Images/menu%20select.png";
-
     cat.onload = function()
     {
-      ctx.drawImage(cat, canvas.width/1.6, 0, cat.width/2.3, cat.height/2.3);
+      ctx.drawImage(cat, cwidth/1.6, 0, cat.width/2.3, cat.height/2.3);
     }
-
     gps.onload = function()
     {
-      ctx.drawImage(gps, canvas.width/8, canvas.height/1.8, gps.width/3, gps.height/3);
+      ctx.drawImage(gps, cwidth/8, cheight/1.8, gps.width/3, gps.height/3);
     }
-
     car.onload = function()
     {
-      ctx.drawImage(car, canvas.width/2, canvas.height/2, car.width/2.7, car.height/2.7);
+      ctx.drawImage(car, cwidth/2, cheight/2, car.width/2.7, car.height/2.7);
     }
 
-    function checkClick (evt) {
+    function checkClick1 (evt) {
       var xy = getMousePos(canvas, evt);
-      if((canvas.width/8 <= xy.x && xy.x <= canvas.width/8 + gps.width/3) &&
-         (canvas.height/1.8 <= xy.y && xy.y <= canvas.height/1.8 + gps.height/3))
+      if((cwidth/8 <= xy.x && xy.x <= cwidth/8 + gps.width/3) &&
+         (cheight/1.8 <= xy.y && xy.y <= cheight/1.8 + gps.height/3))
       {
         crimeChoice = "a";
         alert("it's fine, we all get curious.");
       }
-      else if((canvas.width/1.6 <= xy.x && xy.x <= canvas.width/1.6 + cat.width/2.3) &&
+      else if((cwidth/1.6 <= xy.x && xy.x <= cwidth/1.6 + cat.width/2.3) &&
               (0 <= xy.y && xy.y <= cat.height/2.3))
       {
         crimeChoice = "b";
         alert("it'd be much worse if the cat wasn't half-dead.");
       }
-      else if((canvas.width/2 <= xy.x && xy.x <= canvas.width/2 + car.width/2.7) &&
-              (canvas.height/2 <= xy.y && xy.y <= canvas.height/2 + car.height/2.7))
+      else if((cwidth/2 <= xy.x && xy.x <= cwidth/2 + car.width/2.7) &&
+              (cheight/2 <= xy.y && xy.y <= cheight/2 + car.height/2.7))
       {
         crimeChoice = "c";
         alert("roads? Where we're going, we don't need roads.");
@@ -86,25 +109,26 @@
 
       if(crimeChoice == "a" || crimeChoice == "b" || crimeChoice == "c")
       {
-        canvas.removeEventListener("click", checkClick);
-        ctx.clearRect(0, 0, canvas.width, canvas.height);
+        canvas.removeEventListener("click", checkClick1);
+        ctx.clearRect(0, 0, cwidth, cheight);
         if(crimeChoice == "a")
         {
-          // Load A stages
+          initA();
         }
         else if (crimeChoice == "b")
         {
-          // Load B stages
+          initB();
         }
         else
         {
-          // Load C stages
+          initC();
         }
       }
     }
-
-    canvas.addEventListener("click", checkClick);
+    canvas.addEventListener("click", checkClick1);
   }
+
+
 
   function loadChar()
   {
@@ -114,32 +138,31 @@
     char.onload = function()
     {
       ctx.drawImage(char,0, 0,char.width,   char.height,
-                        0, 0,canvas.width,canvas.height);
+                        0, 0,cwidth,cheight);
       pos.src = "https://raw.githubusercontent.com/Bae18H/HackCMU/master/Images/postive%20criminal%20particle.png";
       neg.src = "https://raw.githubusercontent.com/Bae18H/HackCMU/master/Images/negative%20criminal%20particle.png";
     }
     char.src = "https://raw.githubusercontent.com/Bae18H/HackCMU/master/Images/tag%20urself.png";
-
     pos.onload = function()
     {
-      ctx.drawImage(pos, canvas.width/8, canvas.height/3, pos.width/4, pos.height/4);
+      ctx.drawImage(pos, cwidth/8, cheight/3, pos.width/4, pos.height/4);
     }
 
     neg.onload = function()
     {
-      ctx.drawImage(neg, 5.5*canvas.width/8, canvas.height/3, neg.width/4, neg.height/4.2);
+      ctx.drawImage(neg, 5.5*cwidth/8, cheight/3, neg.width/4, neg.height/4.2);
     }
 
     function checkClick (evt) {
       var xy = getMousePos(canvas, evt);
-      if((canvas.width/8 <= xy.x && xy.x <= canvas.width/8 + pos.width/4) &&
-        (canvas.height/3 <= xy.y && xy.y <= canvas.height/3 + pos.height/4))
+      if((cwidth/8 <= xy.x && xy.x <= cwidth/8 + pos.width/4) &&
+        (cheight/3 <= xy.y && xy.y <= cheight/3 + pos.height/4))
       {
         playerChoice = "p";
         alert("you positively are the worst.");
       }
-      else if((5.5*canvas.width/8 <= xy.x && xy.x <= 5.5* canvas.width/8 + neg.width/4) &&
-        (canvas.height/3 <= xy.y && xy.y <= canvas.height/3 + neg.height/4.2))
+      else if((5.5*cwidth/8 <= xy.x && xy.x <= 5.5* cwidth/8 + neg.width/4) &&
+        (cheight/3 <= xy.y && xy.y <= cheight/3 + neg.height/4.2))
       {
         playerChoice = "n";
         alert("you make everything negative.");
@@ -148,13 +171,14 @@
       if(playerChoice == "p" || playerChoice == "n")
       {
         canvas.removeEventListener("click", checkClick);
-        ctx.clearRect(0,0,canvas.width, canvas.height);
+        ctx.clearRect(0,0,cwidth, cheight);
         loadCrime();
       }
     }
-
     canvas.addEventListener("click", checkClick);
   }
+
+
 
   function loadMain()
   {
@@ -162,20 +186,22 @@
     main.onload = function()
     {
       ctx.drawImage(main,0,0,main.width,   main.height,
-                        0,0,canvas.width,canvas.height);
+                        0,0,cwidth,cheight);
     }
     main.src = "https://raw.githubusercontent.com/Bae18H/HackCMU/master/Images/main%20screen.png";
 
-    window.addEventListener("keypress", (evt) => {
+    function startGame (evt) {
       if(evt.key == "Enter")
       {
-        ctx.clearRect(0,0,canvas.width, canvas.height);
+        canvas.removeEventListener("keydown", startGame);
+        ctx.clearRect(0,0,cwidth, cheight);
         loadChar();
       }
-    });
+    }
+    canvas.addEventListener("keydown", startGame);
   }
-
   loadMain();
+  canvas.focus();
 
 </script>
 
