--- a/test.html
+++ b/test.html
@@ -4,6 +4,7 @@
 		<title>Escaping Charges test file</title>
 		<script type="text/javascript" src="./HackCMU.js"> </script>
 		<script type="text/javascript" src="./test.js"> </script>
+		<script type="text/javascript" src="./levels.js"> </script>
 		<meta charset="UTF-8">
 	</head>
 
