--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
       };
   }
 
-  function loop(nextLevel) {
-    requestID = window.requestAnimationFrame(loop);
+  function loop(nloop, nextLevel) {
+    requestID = window.requestAnimationFrame(nloop);
     if(!goal.update(p.x, p.y))
     {
       ctx.clearRect(0, 0, cwidth, cheight);
@@ -61,8 +61,6 @@
       canvas.removeEventListener("keydown", restart);
       requestID = null;
       stageEnd();
-      console.log(typeof(nextLevel));
-      console.log(nextLevel);
       canvas.addEventListener("keydown", function(evt){
         if(evt.key == "Enter"){
           nextLevel();
